Simple fixes for popup on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -148,9 +148,10 @@ label {
     left: 0;
     right: 0;
     
-    width: 80vw;
-    height: 90vh;
-    padding: 3rem;
+    width: 85vw;
+    height: 95vh;
+    padding: 2rem;
+    overflow: scroll;
 
     margin: auto;
     z-index: 1;
@@ -161,11 +162,11 @@ label {
     width: 50px;
     height: 50px;
     position: absolute;
-    top: -20px;
-    right: -20px;
+    top: calc(2.5vh - 25px);
+    right: calc(7.5vw - 25px);
     display: flex;
     border: 5px solid #068D9D;
-
+    z-index: 10;
 }
 .modal__close svg {
     width: 35%;
@@ -308,6 +309,14 @@ label {
     border: 0;
 }
 @media (max-width: 600px) {
+    .newsletter {
+        padding: 2rem;
+        margin-bottom: 3rem;
+        transform: none;
+    }
+    .newsletter__content {
+        transform: none;
+    }
     .newsletter input, .newsletter placeholder {
         font-size: .9rem;
     }
@@ -408,9 +417,10 @@ label {
         margin-bottom: 2vh;
     }
     .about__title {
+        position: relative;
         padding: 20px 0;
-        transform: rotate(-2deg) translateX(-25px) translateY(30px);
-
+        transform: rotate(-2deg) translateX(-10px) translateY(20px);
+        z-index: 10;
     }
     .about__content {
         padding: 20px 10px;
